--- a/style2.css
+++ b/style2.css
@@ -105,6 +105,8 @@ header h1{
     border-radius: 20%;
     animation-duration: 7s;
     animation-iteration-count: infinite;
+    /* background: url('paws.png');
+    background-size: contain; */
 }
 
 p{
@@ -112,6 +114,7 @@ p{
     font-size: 20px;
     text-align: center;
     font-family: 'Fredoka One', cursive;
+    transition: 1s;
 }
 
 @keyframes letzgoo {
