--- a/style.css
+++ b/style.css
@@ -6,10 +6,26 @@
 }
 
 body{
-    background-image: url("1.png");
-    background-size:contain;
+    /* background-image: url("1.png"); */
+    /* background-size:contain; */
     background-repeat: no-repeat;
-    background-color: #040404
+    background-color: #040404;
+}
+
+/* .cool_cat{
+    float: left;
+    width: 750px;
+    height: 450px;
+    margin-right: 15px;
+} */
+
+.coolcat{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    border: 2px solid white;
+    width: 33%;
+    height: 150px;
 }
 
 header{
@@ -80,6 +96,12 @@ header h1{
     transform: rotate(360deg);
 }
 
+.form{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+}
+
 .form_credentials, .form_option{
     display: block;
     text-align: center;
@@ -98,18 +120,18 @@ header h1{
     text-decoration: underline;
 }
 
-.form:hover{
+.form div:nth-child(1):hover{
     box-shadow: 0 0 50px silver;
     border: #4C4C4C;
     transition: all 0.5s ease;
 }
 
-.form:not(:hover){
+.form div:nth-child(1):not(:hover){
     background-color: #4c4c4c;
     transition: all 1s ease;
 }
 
-.form{
+.items{
     background-color: #4c4c4c;
     display: flex;
     flex-direction: column;
@@ -118,13 +140,28 @@ header h1{
     float: right;
     border: 2px solid #4c4c4c;
     margin-top: 4.5%;
-    margin-right: 50px;
     width: 400px;
     height: 400px;
     border-radius: 20%;
 }
 
-.form h3{
+.form div:nth-child(1){
+    margin-right: 6%;
+}
+
+.form div:nth-child(2){
+    background-color: black;
+    border-color: black;
+    background: url('1.png');
+    background-size: cover;
+    width: 800px;
+    height: 550px;
+    border-radius: 0px;
+    margin: 0px;
+    background-position: bottom;
+}
+
+.items h3{
     color: white;
 }
 
