--- a/style1.css
+++ b/style1.css
@@ -89,6 +89,15 @@ header h1{
     justify-content: space-evenly;
 }
 
+p,h2{
+    opacity: 0%;
+}
+
+p:hover, h2:hover{
+    transition: 1s;
+    opacity: 100%;
+}
+
 .para_items{
     padding: 14px;
     border-radius: 12%;
@@ -107,4 +116,74 @@ header h1{
 
 .para_items:not(:hover){
     transition: 0.5s;
+}
+
+.main .para_items:nth-child(1){
+    background: url("maine.jpg") no-repeat;
+    background-size: cover;
+    background-position: right;
+    transition: 1s;
+}
+
+.main .para_items:nth-child(2){
+    background: url("persian.jpg") no-repeat;
+    background-size: cover;
+    background-position: right;
+    transition: 1s;
+}
+.main .para_items:nth-child(3){
+    background: url("bengal.png") no-repeat;
+    background-size: cover;
+    background-position: right;
+    transition: 1s;
+}
+
+.main .para_items:nth-child(4){
+    background: url("siberian.jpg") no-repeat;
+    background-size: cover;
+    background-position: right;
+    transition: 1s;
+}
+
+.main .para_items:nth-child(5){
+    background: url("ragdoll.jpeg") no-repeat;
+    background-size: cover;
+    background-position: right;
+    transition: 1s;
+}
+
+.main .para_items:nth-child(6){
+    background: url("scottish.jpg") no-repeat;
+    background-size: cover;
+    background-position: center;
+    transition: 1s;
+}
+
+.main .para_items:nth-child(7){
+    background: url("abyssinian.jpeg") no-repeat;
+    background-size: cover;
+    background-position: right;
+    transition: 1s;
+}
+
+.main .para_items:nth-child(8){
+    background: url("norwegian.jpg") no-repeat;
+    background-size: cover;
+    background-position: right;
+    transition: 1s;
+}
+
+.main .para_items:nth-child(9){
+    background: url("siamese.png") no-repeat;
+    background-size: cover;
+    background-position: right;
+    transition: 1s;
+}
+
+
+
+
+.main .para_items:hover{
+    transition: 1s;
+    background: none;
 }
