--- a/style2.css
+++ b/style2.css
@@ -6,9 +6,9 @@
 }
 
 body{
-    background-image: url("1.png");
-    background-size:contain;
-    background-repeat: no-repeat;
+    /* background-image: url("1.png"); */
+    /* background-size:contain; */
+    /* background-repeat: no-repeat; */
     background-color: #040404
 }
 
@@ -87,7 +87,8 @@ header h1{
 
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-between;
+    flex-direction: row-reverse;
     margin-top: 5.5%;
     margin-right: 5%;
 }
@@ -105,8 +106,24 @@ header h1{
     border-radius: 20%;
     animation-duration: 7s;
     animation-iteration-count: infinite;
+    margin-top: -5%;
     /* background: url('paws.png');
     background-size: contain; */
+}
+
+.main div:nth-child(2){
+    background-color: black;
+    border-color: black;
+    background: url('1.png');
+    background-size: cover;
+    width: 950px;
+    height: 550px;
+    border-radius: 0px;
+    margin: 0px;
+    margin-top: -6%;
+    margin-left: -6%;
+    background-position: bottom;
+    box-shadow: none;
 }
 
 p{
